# minishell

./: .gdbinit  .gitignore  .grindmerge  CMakeLists.txt  Makefile  README.md  out  out.txt  output  output2  supp.supp  test.c  tree_visualizer.sh
include/: cmd.h  minishell.h  minishellast.h  parser.h  utils.h
lib/ft/: Makefile
lib/ft/bonus/: Makefile.mk
lib/ft/ctype/: Makefile.mk  ft_isspace.c
lib/ft/gnl/: Makefile.mk  get_next_line.c
lib/ft/include/: get_next_line.h  libft.h
lib/ft/std/: Makefile.mk  ft_bsearch.c  ft_split.c
lib/ft/string/: Makefile.mk  ft_strcat.c  ft_strjoin.c  ft_strncat.c
lib/ft/tab/: Makefile.mk  ft_tab_get_size.c  ft_tab_str_join.c  ft_tab_string_join.c
src/: cmd.c  cmd.h  command.c  exec.c  executor.c  main.c  parsing_pipe.c  parsing_redirection.c  parsing_redirection_utils.c  pipex_argv.c  pipex_child_process.c  pipex_io.c  pipex_main.c  utils.c  utils_str.c
src/builtins/: Makefile.mk  ft_chdir.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/error/: Makefile.mk  ft_error.c
src/exec/: Makefile.mk  ft_ast_walk.c  ft_collect_heredocs_loop.c  ft_heredoc_file_lexing.c  ft_run_builtin.c  ft_sh_collect_heredocs.c  ft_sh_exec_cmd.c  ft_sh_launch.c  ft_sh_run_forked.c  ft_shell_redirect.c
src/parser/: Makefile.mk  free_ast.c  ft_parse_line.c  ft_print_ast.c  ft_sh_lexer.c  ft_sh_split_line.c  lexer.c  lexer_states.c  lexer_states_utils.c  lexer_utils.c  parse_command.c  parse_hd_delimiter.c  parse_print.c  parse_redirections.c  parser.c  parser.tab.c  parser.tab.h  parser.yy.c  shell.y
src/sub/: CMakeLists.txt  exec.c  ft_env.c  ft_pwd.c  main.c  pwd.c  test.h
src/sub/builtins/: ft_chdir.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/sub/utils/: ft_sh_compare.c  ft_sh_env_map.c  ft_sh_env_map_entry_utils.c  ft_sh_env_map_utils.c  ft_sh_exapnd_vars.c  ft_sh_expand_vars.c  ft_sh_finalise.c  ft_sh_init.c  ft_sh_parse.c  ft_sh_read_line.c  ft_sh_split_line.c  ft_shell_compare.c  ft_shell_env_map.c  init.c  utils.c
src/sub/yb/: pipex_argv.c  pipex_child_process.c  pipex_main.c
src/utils/: Makefile.mk  ft_get_argv.c  ft_get_word.c  ft_give_terminal_to.c  ft_perrorf.c  ft_print_ast.c  ft_sh_cmp.c  ft_sh_env_map.c  ft_sh_env_map_entry_utils.c  ft_sh_env_map_utils.c  ft_sh_expand_vars.c  ft_sh_finalise.c  ft_sh_give_terminal_to.c  ft_sh_init.c  ft_sh_init_interactive.c  ft_sh_init_term.c  ft_sh_lookup_pathname.c  ft_sh_loop.c  ft_sh_read_line.c  ft_sh_render_envp.c  ft_sh_split_line.c  ft_tcgetpgrp.c  ft_tcsetpgrp.c  utils.c
tester/: minitest.sh
yb/: Makefile
yb/include/: minishell.h  test.h
yb/src/: main copy.c  main.c  main_old.c  parsing_pipe.c  parsing_redirection.c  pipex.c  pipex_child_process.c  pipex_exec.c  pipex_init.c  pipex_io.c  pipex_utils.c  tree_utils.c  utils.c  utils_tree.c
yb/src/sub/: a.out  pwd.c
